# wasm_gl

./: .gitignore  1.wasm_gl.js  Cargo.toml  LICENSE-MIT  README.md  index.html  rustfmt.toml  wasm_gl.js
src/: app_state.rs  entity.rs  gl_setup.rs  lib.rs  shader.rs
src/assets/shaders/: basic_fragment.glsl  basic_vertex.glsl  fragment.glsl  graph3d_fragment.glsl  graph3d_vertex.glsl  vertex.glsl
src/entity/: entity.rs  graph3d.rs  quad.rs
src/shader/: basic_shader.rs  shader.rs  shader_controller.rs
web/: index.js  package-lock.json  package.json  webpack.config.js
